RESOLVED FIXED133573
[MediaStream] 'get' prefix is missing for capabilities and constraints.
https://bugs.webkit.org/show_bug.cgi?id=133573
Summary [MediaStream] 'get' prefix is missing for capabilities and constraints.
Kiran
Reported 2014-06-06 03:36:08 PDT
capabilities and constraints should be getCapabilities() and getConstraints() as per the spec [1]. [1] http://dev.w3.org/2011/webrtc/editor/getusermedia.html#dfn-getcapabilities
Attachments
[MediaStream] 'get' prefix is missing for capabilities() and constraints() (7.61 KB, patch)
2014-06-06 03:41 PDT, Kiran
no flags
[MediaStream] 'get' prefix is missing for capabilities() and constraints() (7.65 KB, patch)
2014-06-06 03:48 PDT, Kiran
no flags
Kiran
Comment 1 2014-06-06 03:41:56 PDT
Created attachment 232609 [details] [MediaStream] 'get' prefix is missing for capabilities() and constraints() Modified the method names as per the spec.
WebKit Commit Bot
Comment 2 2014-06-06 03:43:19 PDT
Attachment 232609 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kiran
Comment 3 2014-06-06 03:48:33 PDT
Created attachment 232610 [details] [MediaStream] 'get' prefix is missing for capabilities() and constraints() Updated the changeLog file by adding description instead of No new tests.
WebKit Commit Bot
Comment 4 2014-06-06 09:34:13 PDT
Comment on attachment 232610 [details] [MediaStream] 'get' prefix is missing for capabilities() and constraints() Clearing flags on attachment: 232610 Committed r169648: <http://trac.webkit.org/changeset/169648>
WebKit Commit Bot
Comment 5 2014-06-06 09:34:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.